tests/paczka1/small_fuzzy/86682008.err
Error in line 2: 69dCGOzvQh A861 81,4
Error in line 6: Ui9oUWGnoX A277 154,53
Error in line 1: Ui9oUWGnoX A277 56,3
Error in line 9: nHvSSq S492 28,2
Error in line 7: OvbTvGyMkl A277 26,9
Error in line 13: fsdjbVK7s A277 81,2
